# ge_to_ismrmrd

./: CMakeLists.txt  README.md  build.sh
cmake/: FindOrchestra.cmake
ismrmrd/: build.sh  prep_ox.sh
orchestra/: Dockerfile  setup.sh
src/: CMakeLists.txt  GERawConverter.cpp  GERawConverter.h  GenericConverter.cpp  GenericConverter.h  SequenceConverter.h  XMLWriter.h  main.cpp
src/config/: default.xsl
